argocd-apps/charts/monitoring/grafana-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: monitoring
  labels:
    app.kubernetes.io/managed-by: argocd
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 3000
      #hostname: grafana.local
      allowedRoutes:
        namespaces:
          from: Same
