argocd-apps/charts/monitoring/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
  labels:
    app.kubernetes.io/managed-by: argocd
spec:
  parentRefs:
    - name: grafana-gateway
      namespace: monitoring
  #hostnames:
  #- grafana.local
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: kube-prometheus-stack-grafana
        port: 80
